<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="85dp"
        android:layout_height="49dp"
        android:text="@string/text_weight"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="85dp"
        android:layout_height="49dp"
        android:text="@string/text_comparison"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/comparisonheight"
        app:layout_constraintStart_toEndOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="85dp"
        android:layout_height="49dp"
        android:text="@string/text_average"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/averageheight"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/youweight"
        android:layout_width="85dp"
        android:layout_height="49dp"
        app:layout_constraintEnd_toStartOf="@+id/averageweight"
        app:layout_constraintTop_toBottomOf="@+id/youheight" />

    <TextView
        android:id="@+id/comparisonweight"
        android:layout_width="85dp"
        android:layout_height="49dp"
        app:layout_constraintEnd_toEndOf="@+id/comparisonheight"
        app:layout_constraintTop_toBottomOf="@+id/comparisonheight" />

    <TextView
        android:id="@+id/averageweight"
        android:layout_width="85dp"
        android:layout_height="49dp"
        app:layout_constraintEnd_toStartOf="@+id/comparisonweight"
        app:layout_constraintTop_toBottomOf="@+id/averageheight" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="85dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="148dp"
        android:text="@string/text_height"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/averageheight"
        android:layout_width="85dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/youheight"
        app:layout_constraintStart_toEndOf="@+id/youheight" />

    <TextView
        android:id="@+id/comparisonheight"
        android:layout_width="85dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/averageheight"
        app:layout_constraintStart_toEndOf="@+id/averageheight" />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="160dp"
        android:text="@string/text_age"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_height"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="89dp"
        android:layout_height="43dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_weight"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextNumber6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="85dp"
        android:layout_height="49dp"
        android:text="@string/text_you"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/youheight"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/youheight"
        android:layout_width="85dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rdo_guy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="男" />

        <RadioButton
            android:id="@+id/rdo_girl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="女" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>